Fixing firefox code editor z-index

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -20,6 +20,7 @@
   top: 5rem;
   display: flex;
   align-items: center;
+  z-index: 1;
 
 }
 
