--- a/src/components/query-code-editor/query-code-editor.module.scss
+++ b/src/components/query-code-editor/query-code-editor.module.scss
@@ -51,7 +51,3 @@ $error-color: #F86B63;
 .hidden-error-message {
   visibility: hidden;
 }
-
-.code-editor {
-  z-index: -1 !important;
-}
